--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
 node_modules
 logs
-
 .env
+
+# REACT gitignore
+/public/node_modules
+/public/.pnp
+/public.pnp.js
+/public/coverage
+/public/build
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
